<resources>
    <string name="app_name">Aguas del Valle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario Prueba</string>
    <string name="nav_header_subtitle">adv@aguasdelvalle.cl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Mostrar estado</string>
    <string name="action_settings2">Solo prioridad 1</string>
    <string name="action_settings3">Solo prioridad 2</string>
    <string name="action_settings4">Ordenar por fecha ▲</string>
    <string name="action_settings5">Ordenar por fecha ▼</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="url_api">192.168.43.7</string>//192.168.43.7

    <!-- Strings related to login -->
    <string name="prompt_rut">RUT</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_rut">Este RUT es Invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_eventsmap">Mapa</string>
    <string name="sisda">SISDA:</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso:</string>
    <string name="numero_del_cliente">Numero del Cliente:</string>
    <string name="cliente">Cliente:</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="calle">Calle:</string>
    <string name="numero">Numero:</string>
    <string name="depto">Depto:</string>
    <string name="esquina">Esquina:</string>
    <string name="referencia">Referencia:</string>
    <string name="nivel">Nivel:</string>
    <string name="objeto">Objeto:</string>
    <string name="falla">Falla:</string>
    <string name="arranque">Ø Arranque:</string>
    <string name="material">Material:</string>
    <string name="alcantarillado">Ø Alcantarillado:</string>
    <string name="cantidad_de_medidores">Cantidad de Medidores:</string>
    <string name="cliente_social">Cliente Social:</string>
    <string name="actividad_econ_mica">Actividad Económica:</string>
    <string name="localidad">Localidad:</string>
</resources>

