<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_status"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/priority_one"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        app:showAsAction="never" />

    <item
        android:id="@+id/priority_two"
        android:orderInCategory="100"
        android:title="@string/action_settings3"
        app:showAsAction="never" />

    <item
        android:id="@+id/date_up_down"
        android:orderInCategory="100"
        android:title="@string/action_settings4"
        app:showAsAction="never" />

    <item
        android:id="@+id/date_down_up"
        android:orderInCategory="100"
        android:title="@string/action_settings5"
        app:showAsAction="never" />
</menu>
